# lola

./: .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  google-services.json
app/src/androidTest/java/com/tomst/lolly/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  TMSReader.c
app/src/main/cpp/include/: TMSReader.h
app/src/main/java/com/tomst/lolly/: LoginActivity.java  LollyService.java  MainActivity.java  RegisterActivity.java  SecondActivity.java
app/src/main/java/com/tomst/lolly/core/: BoundServiceListener.java  CSVFile.java  CSVReader.java  Constants.java  DmdViewModel.java  FileOpener.java  FileOperation.java  FileProvider.java  OnGeekEventListener.java  OnInfoEventListener.java  OnProListener.java  PermissionManager.java  RFirmware.java  TDendroInfo.java  TDevState.java  TDeviceType.java  TInfo.java  TMSReader.java  TMereni.java  TMeteo.java  TPhysValue.java  ZipFiles.java  mymessageObject.java  pars.java  shared.java  uHer.java
app/src/main/java/com/tomst/lolly/fileview/: FileDetail.java  FileViewerAdapter.java
app/src/main/java/com/tomst/lolly/model/: CheckBoxState.java  DeviceInfo.java
app/src/main/java/com/tomst/lolly/ui/graph/: GraphFragment.java  GraphViewModel.java
app/src/main/java/com/tomst/lolly/ui/home/: HomeFragment.java  HomeViewModel.java
app/src/main/java/com/tomst/lolly/ui/options/: OptionsFragment.java  OptionsViewModel.java
app/src/main/java/com/tomst/lolly/ui/viewfile/: ListFragment.java  ListViewModel.java
app/src/main/java/com/tomst/lolly/utils/: Tools.java  ViewAnimation.java
app/src/main/res/drawable/: baseline_bar_chart_24.xml  baseline_cloud_done_24.xml  baseline_insert_drive_file_24.xml  baseline_settings_24.xml  bookmark.xml  bookx.xml  ic_bookmark.xml  ic_check_box.xml  ic_download.xml  ic_file_download.xml  ic_home_black_24dp.xml  progressbar_green.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_register.xml  activity_second.xml  fragment_graph.xml  fragment_home.xml  fragment_home_copy.xml  fragment_options.xml  fragment_viewer.xml  rowitem.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tomst/lolly/: CSVFileUnitTest.java  ExampleUnitTest.java
data/: data_92221411_2023_09_26_0-data_92224514_2023_09_23_0.csv  data_92221411_2023_09_26_0.csv  data_92224514_2023_09_23_0.csv
gradle/wrapper/: gradle-wrapper.properties
kratousek/: README.md
testovaci_data/: test_l4_1000.csv
